app/styles/pages/GroupPage.css
.group-dashboard {
  width: 90vw;
  max-height: 90vh;

  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;
}

.group-dashboard-button-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;

  width: 25vw;
  max-height: 55vh;
}

.group-dashboard-button-container button {
  width: 100%;
  margin-bottom: 20px;

  z-index: 200;
}

.group-dashboard-actions-container {
  width: 25vw;

  transform: translateY(-30px);
  z-index: 100;
  margin-top: 5px;
  margin-bottom: 20px;
  padding: 10px;

  border-radius: 0 0 10px 10px;
  border: 1px solid black;
  background-color: var(--bg-secondary);
}

#invite-user-form {
  display: flex;
  flex-direction: column;
}

#invite-user-form div {
  margin: 2px 0;
}

.invite-results {
  width: calc(25vw - 20px);

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.invite-results-table {
  width: 22vw;
  min-height: 10vh;
  max-height: 20vh;
  overflow-y: scroll;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.result-row {
  width: 20vw;
  height: 4vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

#invite-username {
  font-weight: bold;
  margin-right: 5px;
}

.success #invite-message {
  color: green;
}

.error #invite-message {
  color: red;
}

.group-chat-section {
  width: 90vw;
  min-height: 38vh;
  margin-top: 20px;
  padding: 10px;

  border-radius: 10px;

  background-color: var(--bg-secondary);

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.chat-container {
  width: 100%;
}

.chat-header {
  width: calc(90vw - 20px);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.chat-messages {
  width: 100%;
  min-height: 25vh;
  max-height: 25vh;
  margin-top: 10px;

  display: flex;
  flex-direction: column;

  overflow-y: auto;
  scrollbar-width: none;

  background-color: var(--bg-secondary-hover);
  border-radius: 10px;
}

.chat-input-container {
  width: 90vw;
  /* height: 2vh; */

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.chat-input-send-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;

  margin-top: 5px;
}

.chat-input-send-container input {
  min-width: 60vw;
  padding: 5px;

  border-radius: 5px;
  /* border: 1px solid var(--bg-secondary); */
  margin: 5px 0;
}

.message {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;

  width: 40vw;
  padding: 10px;
  border-radius: 10px;
  margin: 5px 0;

  word-break: break-word;
  overflow-wrap: anywhere;
}

.message-content {
  width: 60%;
  word-break: break-word;
  overflow-wrap: anywhere;
}

.message-info {
  width: 40%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  align-self: flex-start;
}

.message-own {
  background-color: rgb(26, 101, 162);
  color: white;
  align-self: flex-end;
  margin-right: 10px;
}

.message-other {
  background-color: rgb(188, 188, 188);
  color: black;
  align-self: flex-start;
  margin-left: 10px;
}

